@@ -40,6 +40,7 @@ off with the hotkey 'm'. See 'help mouse' and 'help bind' for more details.
 
 
 [3.8i]
+* NEW set arrow ... filled | nofilled ...
 * NEW set title ... textcolor ...
 * NEW set [x|y|z|cb|...]label ... textcolor ...
 * NEW set label ... textcolor ...
